[package]
name = "smartcalc-app"
version = "1.0.7"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smartcalc = { path = "../smartcalculator/smartcalc" }
eframe = "0.17.0"

serde = { version = "1", features = ["derive"], optional = true }
num-format = { version = "0.4", features = ["with-system-locale"] }
chrono-tz = { version = "0.6.1", default-features = false }
localzone = "0.2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"