[package]
name = "smartcalc-app"
version = "1.0.7"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smartcalc = { path = "../smartcalculator/smartcalc" }
eframe = "0.17.0"
ehttp = "0.2"
poll-promise = "0.1.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

serde = { version = "1.0.130" }
serde_json = { version = "1.0.68" }
serde_derive = "1.0.123"
num-format = { version = "0.4", features = ["with-system-locale"] }
chrono-tz = { version = "0.6.1", default-features = false }
localzone = "0.2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"