[package]
name = "smartcalc-app"
version = "1.0.8"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smartcalc = "1.0.8"
eframe = { version = "0.17.0", features = ["persistence", "default_fonts"] }
ehttp = "0.2"
poll-promise = "0.1.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
image = "0.24.1"
serde = { version = "1.0.130" }
serde_json = { version = "1.0.68" }
serde_derive = "1.0.123"
num-format = { version = "0.4", features = ["with-system-locale"] }
chrono-tz = { version = "0.6.1", default-features = false }
localzone = "0.2.0"
lazy_static = "1.4.0"
once_cell = "1.10.0"

[target.'cfg(all(windows_subsystem = "windows", not(target_arch = "wasm32")))'.build-dependencies]
winres = "0.1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"